feat: 자격/재직상태/에러처리/EXE 배포 정리
- 엑셀: FROM→자격, ANNC/Qualification/재직상태 컬럼 매핑, BASE 정규화(PUS/SEL)
- TP/TS 자격 규칙(LJ,BX,RS) 유지, TS 균등 배분
- 카드: 사번·성별·직급/이름/값만 표시, 휴직예정 카드 연한 황토색+라벨
- API 전역 에러 처리(한글 메시지), 프론트 에러 표시·닫기
- ExcelService Map.ofEntries(11개 컬럼), 빌드 오류 수정
- 비개발자용: run.sh/run.bat, release 패키지, build-exe.bat 개선, 사용방법-EXE설치후.txt

Co-authored-by: Cursor <cursoragent@cursor.com>